# Second_NewDelphi_C3D

./: README.md
Pre-trainedModel/: SerializeKerasModel.py  sport1m_model_backup.py
c3d_keras_python/: Readme  SerializeKerasModel.py  c3d_inference_example.py  c3d_keras_preprocess.py  model_generated.py
python/gazelle_mnist/: model.py  result.txt  train.py
python/minionn/: minionn_model.py
rust/algebra/src/: fixed_point.rs  lib.rs
rust/algebra/src/biginteger/: bigint_32.rs  bigint_64.rs  macros.rs
rust/crypto-primitives/: Cargo.toml
rust/experiments/: Cargo.toml
rust/experiments/src/: c3d_keras_mode.py  lib.rs  linear_only.rs  linear_only_2d.rs  minionn.rs  resnet32.rs
rust/experiments/src/inference/: inference.rs
rust/experiments/src/inference/minionn/: inference.rs
rust/neural-network/: Cargo.toml  README.md
rust/neural-network/src/: lib.rs
rust/neural-network/src/layers/: non_linear.rs
rust/neural-network/src/layers/linear/: average_pooling.rs  convolution.rs  fully_connected.rs  mod.rs  test2.rs  tests.rs  tests_back0510.rs
rust/neural-network/src/tensors/: mod.rs
rust/protocols/: test_conv.py  test_conv_2d.py
rust/protocols-sys/c++/SEAL/native/src/cmake/: SEALConfig.cmake  SEALTargets.cmake
rust/protocols-sys/c++/SEAL/native/src/seal/util/: config.h
rust/protocols-sys/src/: client_linear.rs  server_linear.rs
rust/protocols/src/: linear_layer.rs  neural_network.rs  tests.rs
